# phone-compliance-system

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  PROBLEM_STATEMENT.md  README.md  generate_bank_data.py  generate_sample_data.py  pyproject.toml
infra/: databricks.tf  ecr.tf  iam.tf  outputs.tf  providers.tf  s3.tf  terraform.tfvars.example  variables.tf
pipeline/: bronze.py  data_quality.py  delta_io.py  gold.py  run_bronze.py  run_bronze_cloud.py  run_gold.py  run_gold_cloud.py  run_silver.py  run_silver_cloud.py  silver.py  smoke_test.py  spark_session.py
tests/: conftest.py  test_bronze.py  test_e2e.py  test_gold.py  test_ingest.py  test_integration.py  test_silver.py
tests/sql_tests/: validate_bronze.sql  validate_gold.sql  validate_silver.sql
